--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ class="img-libro"/></a>
 <!--FIN SEGUNDA SECCIÓN DE LA PÁGINA-->
 <!--TERCERA SECCIÓN DE LA PÁGINA-->
 <!--INFORMACIÓN DEL SITIO Y LIBRERIA-->
-<section>
+<section class="seismeses">
   </article>
 </div>
 <div class="elemento">
@@ -252,7 +252,7 @@ class="img-libro1"/></a>
 <div>
 </div>
 <div>
-<a href="https://mega.nz/file/S1wiXSiT#iJL5KCbr8_0G77od_yZneGySPHQVpyDKu84Luk2SkRY" class="btn-compra">Escuchar</a>
+<a href="https://mega.nz/file/S1wiXSiT#iJL5KCbr8_0G77od_yZneGySPHQVpyDKu84Luk2SkRY" class="btn-compra">Escuchar y ver amor</a>
 </div>
 </div>
 </div>    
@@ -300,3 +300,4 @@ class="img-libro1"/></a>
 <!--FIN PIE DE LA PÁGINA-->
 </body>
 </html>
+
